# c-fs

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMPLIANCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  USAGE.md  alpine.Dockerfile  llm.txt  skills.md  ubuntu.Dockerfile
.github/workflows/: ci.yml
include/cfs/: cfs.h  log.h
src/: cfs.c
tests/: CMakeLists.txt  test_main.c
